# JACFFmpegLib

./: .gitignore  Architecture.txt  JACFFmpegLib.pro  JACFFmpegLibSolution.pro  JACFFmpegLib_global.hpp  README.md  WSL deps.txt  install_wsl_deps.sh  jacffmpeglib.cpp  jacffmpeglib.hpp
FFmpegDevRoot/: Readme.txt
FFmpegStaticLibs/: Readme.txt
FFmpegWindowsLibs/: Readme.txt
FFmpeg_libs/: LIBS.txt
JACFFmpegLib/: CMakeLists.txt  JACFFmpegLib.hpp  JACFFmpegLib.pro  README.md  common.hpp  demuxer.cpp  demuxer.hpp  frame.cpp  frame.hpp  inputreader.cpp  inputreader.hpp  muxer.cpp  muxer.hpp  packet.cpp  packet.hpp  pch.hpp  simplefilter.cpp  simplefilter.hpp  simplevideofilter.cpp  simplevideofilter.hpp  stream.cpp  stream.hpp  utilities.cpp  utilities.hpp  videodecoder.cpp  videodecoder.hpp
JACFFmpegLibSolution/: CMakeLists.txt  CMakeSettings.json
JACFFmpegLibSolution/JACFFmpegLib/: CMakeLists.txt  JACFFmpegLib.hpp  audioFrame.cpp  audioFrame.hpp  audioStream.cpp  audioStream.hpp  frame.hpp  inputURL.cpp  inputURL.hpp  pch.hpp  stream.cpp  stream.hpp  utils.cpp  utils.hpp  videoFrame.cpp  videoFrame.hpp  videoStream.cpp  videoStream.hpp
JACFFmpegLibSolution/JACFFmpegLibTest/: CMakeLists.txt  main.cpp
JACFFmpegLibSolution/TestProject/: CMakeLists.txt  testProject.cpp
JACFFmpegLibZig/: build.zig
JACFFmpegLibZig/src/: inputurl.zig  main.zig
OldProject/: JACFFmpegLibSolution.pro
OldProject/FFmpeg_libs/: LIBS.txt
OldProject/JACFFmpegLib/: JACFFmpegLib.hpp  JACFFmpegLib.pro  common.hpp  demuxer.cpp  demuxer.hpp  frame.cpp  frame.hpp  inputreader.cpp  inputreader.hpp  muxer.cpp  muxer.hpp  packet.cpp  packet.hpp  pch.hpp  simplevideofilter.cpp  simplevideofilter.hpp  stream.cpp  stream.hpp  utilities.cpp  utilities.hpp  videodecoder.cpp  videodecoder.hpp
OldProject/TestProject/: TestProject.pro  main.cpp
OldProject2/JACFFmpegLibSolution/: CMakeLists.txt
OldProject2/JACFFmpegLibSolution/JACFFmpegLib/: inputURL.cpp  inputURL.hpp
OldProject2/JACFFmpegLibSolution/TestProject/: testProject.hpp
TestProject/: TestProject.pro  main.cpp
